data/derived/sp14/progs/unify/prog2974.ml.out
Characters 80-82:
  then l1 * (clone 0 a)
       ^^
Error: This expression has type 'a list
       but an expression was expected of type int
